--- a/m8.6.html
+++ b/m8.6.html
@@ -7,22 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .container{
+        .container {
             display: grid;
-            grid-template-columns: repeat(4,1fr);
-            gap:20px 10px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px 10px;
         }
+
         .food {
             border: 5px solid black;
             border-radius: 10px;
             padding: 10px;
-           
+
         }
 
         .food img {
             width: 75%;
-            
 
+
+        }
+
+        @media screen and (max-width:576px) {
+            .container {
+                grid-template-columns: repeat(1, 1fr);
+                background-color: blue;
+            }
+        }
+
+        @media screen and (min-width:577px) and (max-width:992px) {
+            .container {
+                grid-template-columns: repeat(2, 1fr);
+                background-color: brown;
+            }
         }
     </style>
 </head>
